--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -2,13 +2,15 @@
 $body-bg: #f8fafc;
 
 // Typography
-$font-family-sans-serif: 'Nunito', sans-serif;
+$font-family-sans-serif: 'Roboto', sans-serif;
 $font-size-base: 0.9rem;
 $line-height-base: 1.6;
 
 // Colors
+$mainBlue: #55616d;
+$gray: #f0f0f0;
 $blue: #3490dc;
-$indigo: #6574cd;
+$white: #fff;
 $purple: #9561e2;
 $pink: #f66d9b;
 $red: #e3342f;
