--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,11 +1,17 @@
 // Fonts
-@import url('https://fonts.googleapis.com/css?family=Nunito');
+@import url('https://fonts.googleapis.com/css?family=Roboto');
 
-// Variables
-@import 'variables';
+// Util
+@import './variables';
+@import './mixins';
+@import './typography';
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
 
-// Datatables
-@import '~datatables.net-bs4/css/dataTables.bootstrap4.css';
+// Main Layout
+@import './main';
+
+// Login Layout
+@import './login';
+
